fix: icons are not Links children, wrong colors of dropdown menu items if it is a visited link

--- a/src/layouts/main-layout.module.scss
+++ b/src/layouts/main-layout.module.scss
@@ -32,6 +32,12 @@
 
 .link {
   text-decoration: none;
+
+  &[data-disabled] {
+    pointer-events: none;
+    cursor: default;
+    color: var(--color-text-subdued);
+  }
 }
 
 .userMenuHeadingItem {
